<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Topology Editor</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove_trust">Remove Trusted Cert Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_exit">Exit</string>
    <string name="action_add">Add</string>
    <string name="action_add_host">Add Host</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_add_gateway">Add API Server</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_disk">Delete Disk Files</string>
    <string name="action_delete_tag">Delete Tag</string>
    <string name="action_edit">Edit</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_console">Console</string>
    <string name="action_monitoring">Monitoring</string>
    <string name="enabled">Enabled</string>
    <string name="action_add_tag">Add Tag</string>
    <string name="action_save">Save</string>
    <string name="action_save_to_disk">Save to file</string>
    <string name="action_load_from_disk">Load Topology from file</string>
    <string name="action_save_to_anm">Post Topology to server</string>
    <string name="action_load_from_anm">Load Topology from server</string>
    <string name="action_work_local">Local Files</string>
    <string name="action_retry">Retry</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_test">Test</string>
    <string name="action_topo_details">Topology Details</string>
    <string name="action_conn_mgr">Connection Manager</string>
    <string name="action_compare_topo">Compare Topology</string>
    <string name="action_ssh_to_host">SSH to host</string>
    <string name="action_start_gateway">Start Gateway</string>
    <string name="action_move_gateway">Move Gateway to another group</string>
    <string name="action_gateway_kps">Manage KPS</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="empty_string"></string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_creds">Remember credentials</string>
    <string name="forget_creds">Forget credentials</string>
    <string name="cert_not_trusted">Certificate Not Trusted</string>
    <string name="add_to_truststore">Add to trusted certificate store?</string>
    <string name="truststore_not_loaded">Truststore not loaded</string>
    <string name="load_success">Loaded successfully</string>
    <string name="string01">Forget credentials</string>
    <string name="string02">Forget credentials</string>
    <string name="port">Port</string>
    <string name="host">Host</string>
    <string name="hosts">Hosts</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="service">Service</string>
    <string name="services">Services</string>
    <string name="topo_details">Topology Details</string>
    <string name="nodemgr">Node Manager</string>
    <string name="admin_nodemgr">Admin Node Manager</string>
	<string name="nodemgrs">Node Managers</string>
	<string name="gateways">API Server Instances</string>
    <string name="topology">Topology</string>
    <string name="full_topology">Full Topology</string>
    <string name="name">Name</string>
    <string name="mgmt_port">Management Port</string>
    <string name="svcs_port">Services Port</string>
    <string name="test">Test</string>
    <string name="tags">Tags</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="use_ssl">Use SSL?</string>
	<string name="def_progress">Please wait</string>    
    <string name="info">Information</string>
	<string name="alert">Alert</string>
	<string name="error">Error</string>
	<string name="confirm">Confirm</string>
    <string name="confirm_msg">Are you sure?</string>
    <string name="filename">Filename</string>
    <string name="available_files">Files available</string>
    <string name="saved_servers">Saved servers</string>
    <string name="action_check_cert">Is Cert Trusted?</string>
    <string name="cert_trusted">Certificate Chain Trusted</string>
    <string name="truststore_removed">Trust Store removed</string>
    <string name="truststore_notfound">Trust Store not found</string>
    <string name="general_settings">General Settings</string>
    <string name="touch_to_del">Touch OK to delete %1$s \'%2$s\'</string>
    <string name="remember_user">Remember username?</string>
    <string name="forget_sshuser">Forget SSH username</string>
    <string name="sshuser_forgotten">SSH username forgotten</string>
    <string name="local_files">Open file</string>
    <string name="connect_anm">Connect</string>
    
    <string name="invalid_data">Invalid data passed to server</string>
    <string name="svc_port_in_use">Most likely, the services port is in use</string>
    <string name="bad_request">Bad Request</string>
    <string name="not_found">Not Found</string>
    <string name="file_not_found">File Not Found</string>
    <string name="unauthorized">Not Authorized</string>
    <string name="access_denied">Access Denied</string>
    <string name="check_conn">Please check your connection settings.</string>
    <string name="add_conn">Please add or enable a connection via the Connection Manager</string>    
    <string name="conn_error">Connection Error</string>
    <string name="no_saved_files">No saved topology files</string>
    <string name="saved_file">Saved to file %1$s</string>
    <string name="overwrite">%1$s exists. Overwrite?</string>
    <string name="confirm_discard">Touch OK to discard unsaved changes.</string>
    <string name="outstanding_intent">There is currently a background task running which will be killed if you exit. Touch OK to exit anyway.</string>
    <string name="adding">Adding&#8230;</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="updating">Updating&#8230;</string>
    <string name="open_console1">Please open a console before SSHing to a host</string>
    <string name="open_console2">Please open a console and SSH to a host before starting a gateway</string>
	<string name="startinstance_cmd">startinstance -n \"%1$s\" -g \"%2$s\" -d</string>    
	<string name="ssh_cmd">ssh %1$s@%2$s</string>    
</resources>
