<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
        android:id="@+id/container01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
		android:orientation="vertical">
	        
	    <TextView
	        android:id="@android:id/text1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:text="@string/msg_loading" />
	    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container02"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:visibility="gone"
		android:orientation="vertical">
			
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:text="@string/nodemgrs" />
	        		        
	    <ListView 
	        android:id="@+id/list_nodemgrs"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/container03"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:visibility="gone"
		android:orientation="vertical">
			
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:text="@string/gateways" />
	        		        
	    <ListView 
	        android:id="@+id/list_gateways"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        />
    </LinearLayout>
</LinearLayout>
