<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
<!-- 
 -->
    <LinearLayout
        android:id="@id/container01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
		android:paddingBottom="@dimen/listitem_small_margin">	    
	    
	    <include layout="@layout/edit_name"/>
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
			android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label_mgmt_port"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:gravity="fill_horizontal"
		        android:text="@string/mgmt_port"
		        android:labelFor="@id/edit_mgmt_port"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_mgmt_port"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:scrollHorizontally="true"
		        android:inputType="number"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		</LinearLayout>
	    
	    <LinearLayout
	        android:id="@id/container02"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
			android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label_svcs_port"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:gravity="fill_horizontal"
		        android:text="@string/svcs_port"
		        android:labelFor="@id/edit_svcs_port"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_svcs_port"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:scrollHorizontally="true"
		        android:inputType="number"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		</LinearLayout>
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="vertical"
		    android:paddingBottom="@dimen/listitem_small_margin">

	 		<RelativeLayout
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
			> 		    
		        <CheckBox
			        android:id="@id/edit_use_ssl"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:text="@string/use_ssl"
			        android:layout_centerHorizontal="true"
			        android:textAppearance="?android:attr/textAppearanceMedium" 
				/>
	        </RelativeLayout>
		</LinearLayout>
	
	
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label_host"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:gravity="fill_horizontal"
		        android:text="@string/host"
		        android:labelFor="@id/edit_host"
		        android:paddingTop="@dimen/listitem_small_margin"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:orientation="vertical"
		        >
			<AutoCompleteTextView 
			    android:id = "@id/edit_host"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			    />	        
		    </LinearLayout>
		</LinearLayout>
	   
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label_group"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:gravity="fill_horizontal"
		        android:text="@string/group"
		        android:labelFor="@id/edit_group"
		        android:paddingTop="@dimen/listitem_small_margin"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		    <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.5"
		        android:orientation="vertical"
		        >
			<EditText 
			    android:id = "@id/edit_group"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:inputType="text"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			    />	        
		    </LinearLayout>
		</LinearLayout>
	</LinearLayout>
	    	        
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/listitem_small_margin"
        android:paddingTop="@dimen/listitem_small_margin"
        android:paddingBottom="@dimen/listitem_small_margin"
        >
    	<LinearLayout
        	android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:orientation="horizontal">
			<TextView
		        android:id="@id/label_tags"
			    android:layout_width="0dp"
		    	android:layout_height="wrap_content"
				android:layout_weight="0.92"
		        android:paddingTop="@dimen/activity_vertical_margin"
		    	android:gravity="fill_horizontal"
		    	android:textAppearance="@android:style/TextAppearance.Small"
				android:textColor="@android:color/holo_blue_dark"
				android:textStyle="bold"
				android:textAllCaps="true"					
		        android:text="@string/tags"
			/>
			<ImageButton
				android:id="@id/action_add_tag"
			    android:layout_width="40dp"
		    	android:layout_height="wrap_content"
				android:layout_weight="0.08"
		    	android:gravity="right"
		    	android:contentDescription="@string/app_name"
		    	android:src="@android:drawable/ic_menu_add"
			    />				
		</LinearLayout>	    	    
		<ListView 
	        android:id="@id/tag_list"
	        android:layout_height="match_parent"
			android:layout_width="match_parent"
        	android:paddingLeft="@dimen/listitem_small_margin"
        	android:paddingRight="@dimen/listitem_small_margin"
	    />
	</LinearLayout>
	
</LinearLayout>
