<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/listitem_small_margin"
    android:paddingRight="@dimen/listitem_small_margin"
    >
<!--     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 -->
 <!-- 
    <LinearLayout
        android:id="@id/container01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@id/label1"
	        android:layout_width="0dp"
	        android:layout_weight="0.4"
    	    android:layout_height="wrap_content"
    	    android:text="@string/saved_servers"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
		/>
		        
	    <Spinner
	        android:id="@id/saved_servers"
	        android:layout_width="0dp"
	        android:layout_weight="0.6"
	        android:layout_height="wrap_content"
	        />
    </LinearLayout>
 -->    
    <LinearLayout
        android:id="@id/container02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label03"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.3"
		        android:gravity="fill_horizontal"
		        android:text="@string/host"
		        android:labelFor="@id/edit_host"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_host"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.7"
		        android:scrollHorizontally="true"
		        android:inputType="text"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	   </LinearLayout>
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label04"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.3"
		        android:gravity="fill_horizontal"
		        android:text="@string/port"
		        android:labelFor="@id/edit_port"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_port"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.7"
		        android:scrollHorizontally="true"
		        android:inputType="number"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		</LinearLayout>
    
		<LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="vertical"
		    android:paddingBottom="@dimen/listitem_small_margin">
	 		<RelativeLayout
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
			> 		    
	        <CheckBox
		        android:id="@id/edit_use_ssl"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/use_ssl"
		        android:layout_centerHorizontal="true"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        </RelativeLayout>
		</LinearLayout>
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label05"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.3"
		        android:gravity="fill_horizontal"
		        android:text="@string/username"
		        android:labelFor="@id/edit_user"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_user"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.7"
		        android:scrollHorizontally="true"
		        android:inputType="text"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	   </LinearLayout>
	    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
		    android:paddingBottom="@dimen/listitem_small_margin">	    
		    <TextView
		        android:id="@id/label06"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.3"
		        android:gravity="fill_horizontal"
		        android:text="@string/password"
		        android:labelFor="@id/edit_passwd"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        <EditText
		        android:id="@id/edit_passwd"
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="0.7"
		        android:scrollHorizontally="true"
		        android:inputType="textPassword"
		        android:gravity="fill_horizontal"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
		</LinearLayout>
    
	    <LinearLayout
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="vertical"
		    android:paddingBottom="@dimen/listitem_small_margin">
	        
	 		<RelativeLayout
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
			> 		    
	        <CheckBox
		        android:id="@id/edit_enabled"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/enabled"
		        android:layout_centerHorizontal="true"
		        android:textAppearance="?android:attr/textAppearanceMedium" 
			/>
	        </RelativeLayout>
		</LinearLayout>
	
    </LinearLayout>
</LinearLayout>
